# physarum-36p-rs

./: .gitignore  .lazy.lua  Cargo.toml  Justfile  README.md  build.rs  flake.nix
src/: constants.rs  main.rs  pipeline.rs  tutorial.rs
src/audio/: collector.rs  fft.rs  inspectable_source.rs  mod.rs  worker.rs
src/fs/: mod.rs  point_settings.rs  settings.rs
src/graphics/: camera_2d.rs  fft.rs  fft_visualizer.rs  geometry_2d.rs  mod.rs  physarum.rs  playback.rs  preset.rs  settings.rs  text.rs
src/pipeline/: mod.rs  physarum.rs  text.rs
src/shaders/: compute_shader.rs  compute_shader.wgsl  computeshader.wgsl  computeshader_deposit.glsl  computeshader_diffusion.glsl  computeshader_move.glsl  computeshader_setter.glsl  line_render_shader.rs  line_render_shader.wgsl  mod.rs  pipelines.rs  rect_render_shader.rs  rect_render_shader.wgsl  render_shader.rs  render_shader.wgsl  textureshader.wgsl  tris_render_shader.rs  tris_render_shader.wgsl
