[package]
name = "physarum-36p-rs"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "physarum"
path = "src/main.rs"

[dependencies]
bytemuck = "1.23"
env_logger = "0.11"
glam = { version = "0.30", features = ["bytemuck", "encase"] }
pollster = "0.4"
rand = "0.9"
wgpu = { version = "26.0" }
winit = "0.30"

[build-dependencies]
wgsl_to_wgpu = "0.15"
