[package]
name = "physarum-36p-rs"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "physarum"
path = "src/main.rs"

[dependencies]
bytemuck = "1.23"
env_logger = "0.11"
font-kit = "0.14"
glam = { version = "0.30", features = ["bytemuck", "encase"] }
microfft = "0.6.0"
pollster = "0.4"
rand = "0.9"
ringbuffer = "0.16"
rodio = { version = "0.21", default-features = false, features = ["playback", "symphonia-mp3"] }
wgpu = { version = "26.0" }
wgpu_text = "26.0"
winit = "0.30"
xflags = "0.3"

[build-dependencies]
wgsl_to_wgpu = "0.15"
